--- a/styles/quote-cloud.css
+++ b/styles/quote-cloud.css
@@ -147,6 +147,7 @@ a:hover {
     margin-top: 0;
     position: sticky;
     top: 0;
+    z-index: 10;
   }
 
   /* I changed .logo class to .brand class */
